2004/11/30 Morgan Christiansson <drftpd@mog.se>
* Added SITE DELUSER <user> <reason> at the request of M3ta.
* Added patch from M3ta. http://www.drftpd.org/phpBB2/viewtopic.php?p=117#117
* Fixes to SITE USER. Thanks to Altered for the reports.

2004/11/29 Morgan Christiansson <drftpd@mog.se>
* Converted slaves/ to get serialized using javabeans.
  Use this handy code snippet to extract addlines from the old format
  (does not convert idents):
   grep hostMask * | sed \
   -e 's/^\(.*\)\.xml:/site addslave \1 ; site slave \1 addmask /' \
   -e 's/<__hostMask>/*@/' -e 's/<\/__hostMask>//'
* Made slaves delete file on aborted file uploads.

2004/11/26 Morgan Christiansson <drftpd@mog.se>
* Renamed .getUsername() to .getName() and moved the declaration
  to the interface Entity.
* Added pathpermissions to Mirror plugin.
  perm.1=/section1/* -slave1,-slave2
  perm.2=/section2/* =group
* Added initial javabeans usermanager. This will replace the old usermanagers.
  Thanks to captain- for recommending javabeans.

2004/11/24 Morgan Christiansson <drftpd@mog.se>
* Added SITE DEBUG for displaying stacktraces in control connection.
* Changed keys in .properties formatting.
* Made FinishReleaseOnSlaves ignore whether slave is online or offline
* Made FinishReleaseOnSlaves ignore slaves with keyword incoming.
* Added site find -action sendtoslaves and -action deletefromslaves

2004/11/21 Morgan Christiansson <drftpd@mog.se>
* Fixed shutdown in perms.conf to behave like it does in glftpd.
* Added site find -incomplete [min % incomplete] and fixed
  site find -action wipe with multiple entries to wipe.
* Fixed FinishReleaseOnSlaves ArchiveType
* Fixed slave2slave transfers.

2004/11/14 Morgan Christiansson <drftpd@mog.se>
* Changed DELE to update stats aswell as credits.
* Changed SiteBot to use correct section when dated section was used but
  the current dir wasn't used for the upload.

2004/11/12 Morgan Christiansson <drftpd@mog.se>
* Made empty filterchains valid.
